fix style of dark mode

--- a/packages/client/src/components/footer/footer.module.scss
+++ b/packages/client/src/components/footer/footer.module.scss
@@ -57,6 +57,6 @@
 
 .dark {
   background: none;
-  background-color: $dark-ux-background;
+  background-color: $dark-background;
   color: $text-additional;
 }
