--- a/packages/client/src/components/header/header.module.scss
+++ b/packages/client/src/components/header/header.module.scss
@@ -38,53 +38,14 @@
 
 .dark {
   background: none;
-  background-color: $dark-ux-background;
+  background-color: $dark-background;
   border-bottom: 1px solid rgba(149, 149, 149, 0.2);
-}
-
-.darkText {
-  color: $dark-white;
-}
-
-.dark {
-  background: none;
-  background-color: $dark-ux-background;
-  border-bottom: 1px solid rgba(149, 149, 149, 0.2);
-}
-
-.user {
-  display: flex;
-  gap: 10px;
-  align-items: center;
-}
-
-.avatar {
-  width: 50px;
-  height: 50px;
-  border-radius: 100%;
-  object-fit: cover;
-}
-
-.name {
-  font: $h4;
-  margin: 0;
-}
-
-.divider {
-  height: 35px;
-  width: 1px;
-  background-color: $text-additional-color;
-}
-
-.logoutText {
-  font: $text-base-font;
-  cursor: pointer;
-}
-
-.lightText {
-  color: $primary-color;
 }
 
 .darkText {
   color: $dark-theme-white;
+}
+
+.lightText {
+  color: $primary-color;
 }
