--- a/packages/client/src/pages/home/home.module.scss
+++ b/packages/client/src/pages/home/home.module.scss
@@ -38,6 +38,6 @@
 
 .dark {
   background: none;
-  background-color: $dark-ux-background;
+  background-color: $dark-background;
   color: $dark-theme-white;
 }
